--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -11,7 +11,7 @@ jobs:
     outputs:
       commit_message: ${{ steps.get_message.outputs.message }}
     name: Check if the workflow has been disabled.
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Get commit message
