--- a/.github/workflows/Auto Assign.yml
+++ b/.github/workflows/Auto Assign.yml
@@ -6,7 +6,7 @@ on:
     types: [opened]
 jobs:
   run:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       issues: write
       pull-requests: write
